--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
