--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.1.1",
+    "react-preloaders2": "^3.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "tachyons": "^4.12.0",
