--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.0.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
-    "passport": "^0.5.0"
+    "passport": "^0.5.0",
+    "react-password-checklist": "^1.3.1"
   }
 }
